kubernetes-networks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: 
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1  # Максимум 1 под может быть недоступен во время обновления
  template:
    metadata:
      labels:
        app: nginx
    spec:
      nodeSelector:
        homework: "true"
      containers:
        - name: nginx
          image: nginx
          ports:
          - containerPort: 8000
          lifecycle:
            preStop:
              exec:
                # Команда для удаления файла перед остановкой контейнера
                command: ["/bin/sh", "-c", "rm /homework/index.html"]
          volumeMounts:
          - name: workdir
            mountPath: /homework  # Монтируем volume в /homework
          - name: nginx-config
            mountPath: /etc/nginx/nginx.conf  # Монтируем кастомный конфиг
            subPath: nginx.conf  # Говорим, что это файл nginx.conf
          readinessProbe:   
            httpGet:
               path: /index.html   # Проверяет доступность файла по этому пути
               port: 8000          # Адрес: localhost:8000
            initialDelaySeconds: 5      # Задержка перед первой проверкой
            periodSeconds: 10           # Частота проверки
            failureThreshold: 3         # Количество неудачных проверок до пометки как "не готов"
      dnsPolicy: Default
      volumes:
      - name: workdir
        emptyDir: {}
      - name: nginx-config
        configMap:
          name: nginx-config-map  # Добавляем ConfigMap с конфигурацией Nginx
