kubernetes-networks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homework-service
  labels:
    app: homework
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
